--- a/app/views/posts/_form.rhtml
+++ b/app/views/posts/_form.rhtml
@@ -6,7 +6,8 @@
 </p>
 <p>
     <%= f.label :body %><br />
-    <%= f.text_area :body %>
+	<%= textile_editor 'post', 'body' -%>
+	<%= textile_editor_initialize -%>
 </p>
 <p>
     <%= f.submit  %>
