--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,7 +15,8 @@
 	<% remote_form_for [@post, Comment.new] do |f| %>
 		<p>
 			<%= f.label :body, "New comment" %><br />
-			<%= f.text_area :body %><br />
+			<%= textile_editor 'comment', 'body' -%><br />
+			<%= textile_editor_initialize -%>
 			<%= f.submit "Add comment" %>
 		</p>
 	<% end %>
