--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,7 @@
-/* Styles */
-
 body {
 	color: black;
 	font-family: verdana, helvetica, arial, sans-serif;
-	font-size: 73%;  /* Enables font size scaling in MSIE */
+	font-size: 73%;
 	margin: 0;
 	padding: 0;
 }
@@ -12,81 +10,80 @@ html > body {
 	font-size: 9pt;
 }
 
-.doNotDisplay {
-	display: none !important;
+a:link {
+	font-family: verdana, helvetica, arial, sans-serif;
+	cursor: pointer;	
+	color: black;	
+}
+
+a:active {
+	font-family: verdana, helvetica, arial, sans-serif;
+	cursor: pointer;
+	color: black;
+}
+
+a:visited {
+	font-family: verdana, helvetica, arial, sans-serif;
+	cursor: pointer;
+	color: black;
+}
+
+a:hover {
+	font-family: verdana, helvetica, arial, sans-serif;
+	cursor: pointer;
+	color: black;
+	text-decoration: none;
 }
 
 /* Header */
-
-.superHeader {
-	color: rgb(130, 128, 154);
-	background-color: rgb(66, 50, 33);
-	text-align: right;
-	margin: 0;
-	padding: 0.5ex 10px;
-}
-
-.superHeader span {
-	color: #900;
-	background-color: transparent;
-	font-weight: bold;
-}
 
 #header {
 	color: inherit;
 	background-color: rgb(184,38,25);
 }
 
-.headerTitle {
-	margin: 0;
-	padding: 0.25em 4mm 0.25em 4mm;
-}
-
-.headerTitle a {
+.session {
 	color: black;
+	background-color: #eee9e9;
+	text-align: right;
+	margin: 0;
+	padding: 0.5ex 10px;
+}
+
+.session span {
+	color: #900;
 	background-color: transparent;
-	text-decoration: none;
-	font-size: 110%;  /* For MSIE */
 	font-weight: bold;
-	font-style: italic;
 }
 
-.headerTitle > a {
-	font-size: 138%;  /* For fully standards-compliant user agents */
+.logo {
+	color: black;
+	background-color: #cdc9c9;
+	text-align: center;
+	margin: 0;
+	padding: 0.26ex 10px;
 }
 
-.headerTitle span {
+.navigation {
 	color: white;
-	background-color: transparent;
-	font-weight: normal;
-}
-
-.subHeader {
-	color: white;
-	background-color: #600;
+	background-color: #8b8989;
 	font-size: 109%;
 	text-align: center;
 	margin: 0;
 	padding: 0.5ex 0;
 }
 
-.subHeader a {
+.navigation a {
 	color: white;
-	background-color: #900;
 	text-decoration: none;
 	font-weight: bold;
 	margin: 0;
 	padding: 0 1ex;
 }
 
-.subHeader a:hover {
-	color: black;
-	background-color: white;
-}
+/* Content */
 
-/* Body */
-
-#main-copy {
+#content {
 	color: black;
 	background-color: white;
 	text-align: justify;
@@ -96,56 +93,7 @@ html > body {
 	border-left: 1px solid rgb(216,210,195);
 }
 
-#main-copy h1 {
-	color: #900;
-	background-color: transparent;
-	font-family: arial, verdana, helvetica, sans-serif;
-	font-size: 175%;
-	font-weight: bold;
-	font-style: italic;
-	text-align: left;
-	margin: 1em 0 0 0;
-	padding: 1em 0 0 0;
-	border-top: 1px solid rgb(216,210,195);
-}
-
-#main-copy a {
-	color: #600;
-	background-color: transparent;
-	text-decoration: underline;
-}
-
-#main-copy a:hover {
-	text-decoration: none;
-}
-
-p {
-	margin: 1em 0 1.5em 0;
-	padding: 0;
-}
-
-/* Header */
-
-.midHeader {
-	color: lightgray;
-	background-color: #900;
-	margin: 0;
-	padding: 0.26ex 10px;
-}
-
-.headerTitle {
-	font-size: 300%;
-	margin: 0;
-	padding: 0;
-}
-
-.headerSubTitle {
-	font-size: 151%;
-	font-weight: normal;
-	font-style: italic;
-	margin: 0 0 1ex 0;
-	padding: 0;
-}
+/* Extra */
 
 fieldset {
 	margin: 1em 0;
