--- a/app/views/comments/_comment.rhtml
+++ b/app/views/comments/_comment.rhtml
@@ -1,6 +1,6 @@
 <% div_for comment do %>
 
 	<%= textilize comment.body %>
-  	<small>Posted by <%= comment.user.login %> <%= time_ago_in_words(comment.created_at) %> ago</small>
+  	<small>Posted by <%= link_to h(comment.user.login), comment.user %> <%= time_ago_in_words(comment.created_at) %> ago</small>
 
 <% end %>
