--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> 
 		<%= stylesheet_link_tag 'style' %>
 		<%= auto_discovery_link_tag :atom, posts_path(:atom) %>
-	  	<%= javascript_include_tag :all %>
+	  	<%= javascript_include_tag :defaults, "jquery" %>
 
 		<!--
 		   	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js"></script>
