--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,6 +2,6 @@
 
 	<h3><%= link_to_unless_current h(post.title), post %></h3>	
 	<%= textilize post.body %>
-	<small>Posted by <%=h post.user.login %> <%= time_ago_in_words(post.created_at) %> ago</small>
+	<small>Posted by <%= link_to h(post.user.login), post.user %> <%= time_ago_in_words(post.created_at) %> ago</small>
 
 <% end %>
