--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,21 +1,6 @@
 <h1>Editing post</h1>
 
-<% form_for(@post) do |f| %>
-	<%= f.error_messages %>
-
-	<p>
-	    <%= f.label :title %><br />
-	    <%= f.text_field :title %>
-	</p>
-	<p>
-	    <%= f.label :body %><br />
-		<%= textile_editor 'post', 'body' -%>
-		<%= textile_editor_initialize -%>
-	</p>
-	<p>
-	    <%= f.submit  %>
-	</p>
-<% end %>
+<%= render :partial => 'form' %>
 
 <%= link_to 'Show', @post %> |
 <%= link_to 'Back', posts_path %>
