--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,5 @@
 <h1>New post</h1>
 
-<% form_for(@post) do |f| %>
-  <%= render :partial => "form" , :locals => { :f => f }  %>
-<% end %>
+<%= render :partial => 'form' %>
 
 <%= link_to 'Back', posts_path %>
