--- a/app/views/users/create.html.erb
+++ b/app/views/users/create.html.erb
@@ -1,15 +1,8 @@
 <fieldset>
-
 	<legend>Account activation</legend>
-	  
 	<p>
 		An e-mail has been sent to <%= @user.email %> with instructions to activate your account.
-		<li>
-		  If your email is not valid, you must <%= link_to "signup", signup_path %> again and provide a valid email address.
-		</li>
-		<li>
-		  If you don't recieve an email, check your bulk or trash folder, as your spam filter may have inadvertantly caught the registration email.
-		</li>
+		  <li>If your email is not valid, you must <%= link_to "signup", signup_path %> again and provide a valid email address.</li>
+		  <li>If you havnt't recieved an email, check your bulk or trash folder.</li>
 	</p>
-	
 </fieldset>
