--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,23 +7,18 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> 
 		<%= stylesheet_link_tag 'style' %>
 		<%= auto_discovery_link_tag :atom, posts_path(:atom) %>
-	  	<%= javascript_include_tag :defaults, "jquery" %>
+		
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js"></script>
+	   	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.js"></script>
+		<%= javascript_include_tag :defaults, 'jquery.form', 'application' %>
 
-		<!--
-		   	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js"></script>
-		   	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.js"></script>
-		   	<% if protect_against_forgery? %>
-		     		<script type='text/javascript'>
-		         		//<![CDATA[
-		           	window._auth_token_name = "#{request_forgery_protection_token}";
-		           	window._auth_token = "#{form_authenticity_token}";
-		       		//]]>
-		       		</script>
-		   	<% end %>
-
-		   	<%= javascript_include_tag 'application' %>
-		   	<%= javascript_include_tag 'jquery.form' %>
-		-->
+	  
+		<% if protect_against_forgery? %>
+     		<script type='text/javascript'>
+           		window._auth_token_name = "#{request_forgery_protection_token}";
+           		window._auth_token = "#{form_authenticity_token}";
+       		</script>
+		<% end %>
 	</head>
 
 	<body>
