--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,29 +3,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-US">
 
 	<head>
-		<title><%= @page_title || 'Chaldkydri' %></title>
+		<title><%= @page_title || "Jeroen's zandbak" %></title>
+		
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> 
 		<%= stylesheet_link_tag 'style' %>
 		<%= auto_discovery_link_tag :atom, posts_path(:atom) %>
 		
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js"></script>
 	   	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.js"></script>
-		<%= javascript_include_tag :defaults, 'jquery.form', 'application' %>
 
-	  
 		<% if protect_against_forgery? %>
-     		<script type='text/javascript'>
-           		window._auth_token_name = "#{request_forgery_protection_token}";
-           		window._auth_token = "#{form_authenticity_token}";
-       		</script>
+		  <script type='text/javascript'>
+		      //<![CDATA[
+		        window._auth_token_name = "#{request_forgery_protection_token}";
+		        window._auth_token = "#{form_authenticity_token}";
+		    //]]>
+		    </script>
 		<% end %>
+		
+		<%= javascript_include_tag :defaults, 'jquery.form', 'application' %>
 	</head>
 
 	<body>
 	
 		<!-- Header -->
 		<div id="header">
-			<div class="session">
+			<div id="session">
 				<% if user_logged_in? %>
 					You are logged in as: <%= current_user.login %>.
 					<%= link_to 'Logout', logout_url %>
@@ -34,17 +37,16 @@
 					<%= link_to 'Login', login_url %>
 				<% end %>
 			</div>
-			<div class="logo"> 
-				<h1>Chaldkydri</h1>
+			<div id="logo"> 
+				<h1>Jeroen's zandbak</h1>
 			</div>
-			<div class="navigation">
+			<div id="navigation">
 				<%= link_to 'Posts', posts_path %>
 			</div>
-
 		</div>
 
 		<!-- Body -->
-		<div id="content">
+		<div id="container">
 			<% flash.each do |key, value| %>
 				<div id="flash" class="flash_<%= key %>">
 					<span class="message"><%= value %></span>
