Working on JQuery

--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,4 +1,3 @@
-$("#comments").append('<%= escape_javascript(render(:partial => @comment)) %>');
-$(".comment:last").fadeIn();
-$(".comment:last").effect("highlight");
-$("#new_comment")[0].reset();
+$('#comments').append('<%= escape_javascript(render(:partial => @comment)) %>');
+$('#comments:last').effect("highlight")
+$('#comment_body').clear();
