--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 		    </script>
 		<% end %>
 		
-		<%= javascript_include_tag :defaults, 'jquery.form', 'application' %>
+		<%= javascript_include_tag 'jquery.form', 'application' %>
 	</head>
 
 	<body>
